--- a/css/index.css
+++ b/css/index.css
@@ -4,13 +4,30 @@ html {
     padding: 0;
 }
 
-video {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    min-width: 100%;
-    min-height: 100%;
-    width: auto;
-    height: auto;
+@media only screen and (min-width: 540px) {
+    video {
+        position: fixed;
+        top: 50%;
+        left: 50%;
+        z-index: 1;
+        min-width: 100%;
+        min-height: 100%;
+        width: auto;
+        height: auto;
+        transform: translate(-50%, -50%);
+    }
+}
+
+@media only screen and (max-width: 540px) {
+    video {
+        position: fixed;
+        top: 50%;
+        left: 50%;
+        z-index: 1;
+        /* min-width: 100%;
+        min-height: 50%; */
+        width: auto;
+        height: 130vw;
+        transform: translate(-50%, -50%);
+    }
 }
