--- a/css/main.css
+++ b/css/main.css
@@ -357,6 +357,11 @@ ul.social-network li {
     background-color: #F9F9F9;
 }
 
+.brochure {
+    margin: 5% 0%;
+    font-size: 1.4em;
+}
+
 
 /*Message Box*/
 
@@ -925,6 +930,9 @@ button.ui-button {
     }
     .nav-brand-text {
         font-size: 1.4em;
+    }
+    .brochure {
+        font-size: 1em;
     }
     .msg-title {
         font-size: 1.5em;
