some minor changes to event details

--- a/css/main.css
+++ b/css/main.css
@@ -554,7 +554,7 @@ a.text {}
 
 .event-card-holder {
     /*Event Card Holder*/
-    padding: 10%;
+    padding: 10% 0%;
     border-radius: 10%;
 }
 
@@ -569,7 +569,7 @@ a.text {}
     color: white;
     font-family: Arial, Helvetica, sans-serif;
     text-align: center;
-    font-family: 'Roboto Slab', serif;
+    font-family: 'Righteous', cursive;
     font-size: 2em;
     text-shadow: -4px 4px 10px rgba(0, 0, 0, 0.884);
 }
@@ -674,6 +674,7 @@ a.text {}
     color: white;
     top: 0;
     font-size: 0.8em;
+    font-weight: 700;
     padding-right: 2%;
     right: 10%;
     line-height: 15px;
@@ -750,7 +751,7 @@ button.ui-button {
 }
 
 .ui-widget {
-    background: linear-gradient(to left bottom, rgb(255, 215, 156), rgb(255, 182, 79));
+    background: linear-gradient(to left bottom, #00B4DB, #0083B0);
     border-radius: 0px;
     border: none;
 }
@@ -777,7 +778,7 @@ button.ui-button {
     font-family: 'Lobster', cursive;
     color: white;
     text-align: center;
-    background: transparent;
+    background: linear-gradient(to left bottom, #0097c6, #00a6d2);
     border: none;
     font-size: 2em;
 }
@@ -1057,7 +1058,10 @@ button.ui-button {
         font-size: 0.7em;
     }
     .event-card-holder {
-        padding: 0 0;
+        padding-left: 0;
+        padding-right: 0;
+        padding-top: 0;
+        padding-bottom: 10%;
     }
     .event-header {
         width: 100%;
