--- a/css/main.css
+++ b/css/main.css
@@ -820,7 +820,14 @@ button.ui-button {
 
 .para-dlg-3 {
     padding: 2% 4% 2% 4%;
+    font-weight: bold;
+    font-family: sans-serif;
     text-align: justify;
+}
+
+.para-dlg-4 {
+    padding: 2% 4% 2% 18%;
+    text-align: left;
 }
 
 
