--- a/css/main.css
+++ b/css/main.css
@@ -429,8 +429,10 @@ ul.social-network li {
 .nav-brand-text {
     font-family: 'Cinzel Decorative', cursive;
     font-size: 2.5rem;
-    background: linear-gradient(to right, rgb(255, 0, 0) 0%, rgb(246, 250, 18) 60%, #03a81e 100%);
+    background: /* url("../images/bg_text.jpg");*/
+    linear-gradient(to right bottom, rgb(255, 0, 0) 15%, rgb(18, 196, 250) 40%, rgb(219, 219, 0) 60%, #03a81e 90%);
     background-clip: text;
+    filter: drop-shadow(-2px 2px 4px black);
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
 }
