--- a/css/main.css
+++ b/css/main.css
@@ -1051,8 +1051,8 @@ button.ui-button {
 }
 
 .card-contactus.image {
-    width: calc(32vh*0.6);
-    height: calc(32vh*0.6);
+    width: calc(33vh*0.6);
+    height: calc(33vh*0.6);
     border-radius: 50%;
     margin-right: 20%;
     margin-left: 20%;
@@ -1068,6 +1068,10 @@ button.ui-button {
     margin-top: 3%;
     font-weight: 800;
     color: black;
+}
+
+.card-contactus.title.doadjust {
+    font-size: 1.3em;
 }
 
 .card-contactus.sub-title {
@@ -1385,6 +1389,9 @@ button.ui-button {
     .card-contactus.title {
         font-size: 1.3em;
     }
+    .card-contactus.title.doadjust {
+        font-size: 1.25em;
+    }
     .card-contactus.sub-title {
         font-size: 0.8em;
     }
@@ -1496,6 +1503,9 @@ button.ui-button {
     }
     .card-contactus.title {
         font-size: 1.1em;
+    }
+    .card-contactus.title.doadjust {
+        font-size: 1em;
     }
     .card-contactus.sub-title {
         font-size: 0.65em;
